# fortransky

./: .gitignore  CMakeLists.txt  README.md
bridge/firehose-bridge/: Cargo.toml
bridge/firehose-bridge/src/: abi.rs  car.rs  commit.rs  dagcbor.rs  decoder.rs  envelope.rs  fixtures.md  lib.rs  normalize.rs
cshim/: firehose_bridge.h  http_bridge.c
fixtures/: relay_commit_expected.jsonl
scripts/: build.sh  build_bridge.sh  check_assemblersky.sh  dither_prep.py  jetstream_tail.py  make_relay_fixture.py  pixels_to_png.py  relay_raw_tail.py
src/app/: main.f90
src/atproto/: client.f90  decode.f90  firehose_bridge.f90  http_cbridge.f90  http_cli.f90  json_extract.f90
src/core/: app_state.f90  config.f90  models.f90  post_store.f90
src/storage/: log_store.f90
src/ui/: tui.f90
src/util/: dither.f90  process.f90  strings.f90
